integration/fixtures/manifests/metron-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metron
  labels:
    app: metron
spec:
  selector:
    app: metron
  ports:
    - protocol: UDP
      port: 3458
      targetPort: 3458
