integration/fixtures/manifests/policy-server.yaml
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: policy-server-configmap
data:
  policy-server-internal.json: |-
    {
      "listen_host": "0.0.0.0",
      "log_prefix": "cfnetworking",
      "debug_server_host": "127.0.0.1",
      "debug_server_port": 31945,
      "health_check_port": 31946,
      "internal_listen_port": 4003,
      "database": {
        "type": "postgres",
        "user": "postgres",
        "password": "postgres",
        "host": "postgres-postgresql",
        "port": 5432,
        "timeout": 120,
        "database_name": "network_policy",
        "require_ssl": true,
        "ca_cert": "/etc/ssl/certs/policy-server/ca.crt",
        "skip_hostname_validation": false
      },
      "max_idle_connections": 10,
      "max_open_connections": 200,
      "connections_max_lifetime_seconds": 3600,
      "tag_length": 2,
      "metron_address": "metron.default.svc.cluster.local:3458",
      "log_level": "debug",
      "ca_cert_file": "/etc/ssl/certs/policy-server/ca.crt",
      "server_cert_file": "/etc/ssl/certs/policy-server/tls.crt",
      "server_key_file": "/etc/ssl/certs/policy-server/tls.key",
      "request_timeout": 5
    }
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: policy-server
  labels:
    app: policy-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: policy-server
  template:
    metadata:
      labels:
        app: policy-server
    spec:
      containers:
        - name: policy-server-internal
          image: ghcr.io/cloudfoundry/k8s/policy-server:latest
          imagePullPolicy: Always
          command: [ "/usr/local/bin/policy-server-internal" ]
          args:
          - -config-file
          - /policy-server/policy-server-internal.json
          volumeMounts:
            - name: policy-server-config
              mountPath: /policy-server
            - name: policy-server
              mountPath: /etc/ssl/certs/policy-server
              readOnly: true
          resources:
            requests:
              cpu: 250m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 64Mi
      volumes:
        - name: policy-server-config
          configMap:
            name: policy-server-configmap
        - name: policy-server
          secret:
            secretName: policy-server
---
kind: Service
apiVersion: v1
metadata:
  name: policy-server
  labels:
    app: policy-server
spec:
  ports:
  - port: 4003
    name: https
    targetPort: 4003
    appProtocol: kubernetes.io/h2c
  selector:
    app: policy-server
